@@ -1,3 +1,10 @@
+2008-02-21  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Willie Walker <william.walker@sun.com>
+
+	* gnome-at-commandline.in.in: use `...` syntax instead of $(...) for
+	better portability (bug #517938)
+
 2008-02-09  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-default-applications.xml.in: add support for Konsole, too
